--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.3",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.12"
   }
 }
